assembla 728 - fix for overlapping things in projects / jobs

--- a/public/theme/europeana-cope/css/screen.css
+++ b/public/theme/europeana-cope/css/screen.css
@@ -2646,19 +2646,19 @@ main .section-banner:first-child a.banner {
 
 @media only screen and (min-width: 47.9375em) {
   .contentpage.detail-jobs .header-group h1, .contentpage.detail-projects .header-group h1 {
-    padding-right: 150px; } }
+    padding-right: 180px; } }
 
 @media only screen and (min-width: 80em) {
   .contentpage.detail-jobs .header-group h1, .contentpage.detail-projects .header-group h1 {
-    padding-right: 100px; } }
+    padding-right: 120px; } }
 
 @media only screen and (min-width: 47.9375em) {
   .contentpage.detail-jobs .introduction, .contentpage.detail-projects .introduction {
-    padding-right: 150px; } }
+    padding-right: 180px; } }
 
 @media only screen and (min-width: 80em) {
   .contentpage.detail-jobs .introduction, .contentpage.detail-projects .introduction {
-    padding-right: 100px; } }
+    padding-right: 120px; } }
 
 @media only screen and (min-width: 47.9375em) {
   .author-small-container {
